--- a/Statistics/DZ/dz1.ipynb
+++ b/Statistics/DZ/dz1.ipynb
@@ -2,18 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import matplotlib as plt\n",
-    "import scipy.stats as st"
+    "import matplotlib.pyplot as plt\n",
+    "import scipy.stats as st\n",
+    "from statsmodels.distributions.empirical_distribution import ECDF\n",
+    "from scipy.stats import kstest"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -22,7 +24,10 @@
      "text": [
       "[ 18  21  48  48  60  63  84 100 116 117 118 133 135 163 171 174 175 213\n",
       " 219 230 327 327 356 384 410]\n",
-      "392\n"
+      "Range = 392\n",
+      "Median = 135.0\n",
+      "Lower quartile = 84.0\n",
+      "Upper qurtile = 219.0\n"
      ]
     }
    ],
@@ -32,132 +37,78 @@
     "x = np.sort(x)\n",
     "print(x)\n",
     "range_x = x.max() - x.min()\n",
-    "print(range_x)"
+    "print(\"Range = \" + str(range_x))\n",
+    "print(\"Median = \" + str(np.median(x)))\n",
+    "print(\"Lower quartile = \" + str(np.percentile(x, 25)))\n",
+    "print(\"Upper qurtile = \" + str(np.percentile(x, 75)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<scipy.stats._distn_infrastructure.rv_frozen object at 0x000001998E3F4828>\n"
+     ]
+    }
+   ],
+   "source": [
+    "uniform = st.uniform(0, 240)\n",
+    "print(uniform)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "4.0"
+       "0.3989422804014327"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "y = np.array([0, 2, 4, 8 ,10])\n",
-    "np.median(y)\n"
+    "st.norm.pdf(0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = np.linspace(0, 240, 1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>0</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>15</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>36</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>39</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>40</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>41</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>42</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>43</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>47</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>49</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     0\n",
-       "0    6\n",
-       "1    7\n",
-       "2   15\n",
-       "3   36\n",
-       "4   39\n",
-       "5   40\n",
-       "6   41\n",
-       "7   42\n",
-       "8   43\n",
-       "9   47\n",
-       "10  49"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.04 0.08 0.16 0.16 0.2  0.24 0.28 0.32 0.36 0.4  0.44 0.48 0.52 0.56\n",
+      " 0.6  0.64 0.68 0.72 0.76 0.8  0.88 0.88 0.92 0.96 1.  ]\n",
+      "KstestResult(statistic=1.0, pvalue=0.0)\n"
+     ]
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "df = pd.DataFrame([6, 7, 15, 36, 39, 40, 41, 42, 43, 47, 49])\n",
-    "df."
+    "ecdf = ECDF(x)\n",
+    "print(ecdf(x))\n",
+    "print(kstest(x, 'norm'))"
    ]
   },
   {
