--- a/Statistics/Projects/team4/Project (2).ipynb
+++ b/Statistics/Projects/team4/Project (2).ipynb
@@ -633,7 +633,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x21b86aa2eb8>"
+       "<seaborn.axisgrid.PairGrid at 0x172fe9b26d8>"
       ]
      },
      "execution_count": 4,
@@ -689,7 +689,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x21b889744a8>"
+       "<matplotlib.legend.Legend at 0x172fe9b29b0>"
       ]
      },
      "execution_count": 5,
@@ -719,7 +719,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x21b8a5c1898>"
+       "<matplotlib.legend.Legend at 0x17282567ef0>"
       ]
      },
      "execution_count": 6,
@@ -1713,8 +1713,8 @@
       "Dep. Variable:     Заготівля деревини   R-squared:                       0.888\n",
       "Model:                            OLS   Adj. R-squared:                  0.855\n",
       "Method:                 Least Squares   F-statistic:                     27.61\n",
-      "Date:                Fri, 29 Jun 2018   Prob (F-statistic):           1.64e-06\n",
-      "Time:                        22:02:29   Log-Likelihood:                -162.51\n",
+      "Date:                Mon, 02 Jul 2018   Prob (F-statistic):           1.64e-06\n",
+      "Time:                        23:43:06   Log-Likelihood:                -162.51\n",
       "No. Observations:                  19   AIC:                             335.0\n",
       "Df Residuals:                      14   BIC:                             339.7\n",
       "Df Model:                           4                                         \n",
@@ -1812,7 +1812,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x21b8b1d8b38>"
+       "<matplotlib.collections.PathCollection at 0x17282fe30b8>"
       ]
      },
      "execution_count": 14,
